@@ -1,8 +1,8 @@
 Package: GenomicTools.fileHandler
 Type: Package
 Title: File Handlers for Genomic Data Analysis
-Version: 0.1.5.8
-Date: 2020-02-11
+Version: 0.1.5.9
+Date: 2020-03-05
 Author: Daniel Fischer
 Maintainer: Daniel Fischer <daniel.fischer@luke.fi>
 Description: A collection of I/O tools for handling the most commonly used genomic datafiles, like fasta/-q, bed, gff, gtf, ped/map and vcf.
@@ -15,6 +15,6 @@ Encoding: UTF-8
 LazyLoad: yes
 RoxygenNote: 6.1.1
 NeedsCompilation: no
-Packaged: 2020-02-11 12:05:02 UTC; ejo138
+Packaged: 2020-03-05 07:25:36 UTC; ejo138
 Repository: CRAN
-Date/Publication: 2020-02-11 12:30:02 UTC
+Date/Publication: 2020-03-05 08:00:07 UTC
